--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,16 @@
   --color-background: #ffffff;
 
   --fs-xl: 3.2rem;
-  --fs-400: 2.4rem;
-  --fs-300: 1.8rem;
+  --fs-400: 1.8rem;
+  --fs-300: 1.5rem;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -23,14 +25,86 @@ html {
 body {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: var(--fs-400);
+  font-weight: 300;
   color: var(--color-primary);
-  margin: 0;
-  padding: 0;
 }
 
 h2 {
   font-size: var(--fs-300);
   font-weight: 700;
+}
+
+/* Testimonial */
+.testimonial {
+  text-align: center;
+}
+
+.testimonial__photo {
+  width: 250px;
+  border-radius: 5px;
+  margin-bottom: 8rem;
+  position: relative;
+}
+
+.testimonial__content {
+  margin-bottom: 2rem;
+  line-height: 1.4;
+  quotes: '"' '"';
+}
+
+.testimonial__content::before {
+  content: open-quote;
+  font-style: italic;
+}
+
+.testimonial__content::after {
+  content: close-quote;
+  font-style: italic;
+}
+
+.testimonial__job {
+  font-size: var(--fs-300);
+  font-weight: 500;
+  color: var(--color-secondary);
+}
+
+/* Slider */
+.slider {
+  width: 100%;
+  height: 540px;
+  margin-block: 5rem;
+}
+.slide {
+  position: absolute;
+  padding-inline: 2.5rem;
+}
+
+.button-frame {
+  width: 250px;
+  height: 250px;
+  /* background-color: black; */
+  position: relative;
+  margin-inline: auto;
+}
+
+/* Slider buttons */
+.slider__buttons {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-background);
+  width: 8rem;
+  padding: 1.2rem 1.5rem;
+  border-radius: 50px;
+  position: absolute;
+  bottom: -18px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn {
+  height: 14px;
+  width: 9px;
+  cursor: pointer;
 }
 
 /* Attribution */
