--- a/css/style.css
+++ b/css/style.css
@@ -37,27 +37,46 @@ h2 {
 /* Testimonial */
 .testimonial {
   text-align: center;
+  width: 85%;
+  margin: 5rem auto;
 }
 
 .testimonial__photo {
+  display: block;
+  margin-inline: auto;
   width: 250px;
   border-radius: 5px;
-  margin-bottom: 8rem;
-  position: relative;
+  max-height: 0;
+}
+
+.testimonial__photo--active {
+  max-height: 100%;
 }
 
 .testimonial__content {
-  margin-bottom: 2rem;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+}
+
+.testimonial__content--active {
+  opacity: 1;
+  max-height: 100vh;
+}
+
+.testimonial__text {
+  font-size: clamp(var(--fs-400), 1.4rem + 1vw, var(--fs-xl));
+  padding-bottom: 2rem;
   line-height: 1.4;
   quotes: '"' '"';
 }
 
-.testimonial__content::before {
+.testimonial__text::before {
   content: open-quote;
   font-style: italic;
 }
 
-.testimonial__content::after {
+.testimonial__text::after {
   content: close-quote;
   font-style: italic;
 }
@@ -68,23 +87,9 @@ h2 {
   color: var(--color-secondary);
 }
 
-/* Slider */
-.slider {
-  width: 100%;
-  height: 540px;
-  margin-block: 5rem;
-}
-.slide {
-  position: absolute;
-  padding-inline: 2.5rem;
-}
-
-.button-frame {
-  width: 250px;
-  height: 250px;
-  /* background-color: black; */
+.slide__img-container {
   position: relative;
-  margin-inline: auto;
+  margin-bottom: 8rem;
 }
 
 /* Slider buttons */
@@ -96,7 +101,7 @@ h2 {
   padding: 1.2rem 1.5rem;
   border-radius: 50px;
   position: absolute;
-  bottom: -18px;
+  bottom: -20px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -115,3 +120,46 @@ h2 {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+/* @media screen and (min-width: 600px) {
+  .testimonial {
+    text-align: left;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding-left: 10%;
+  }
+
+  .testimonial__photo {
+    width: 45%;
+    transform: translateX(-25%);
+    z-index: -1;
+    margin-bottom: 0;
+  }
+
+  .testimonial__content {
+    width: 55%;
+  }
+
+  .testimonial__author {
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  .button-frame {
+    width: 38%;
+    padding-bottom: 39%;
+    transform: translateX(49%);
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .testimonial__author > * {
+    font-size: var(--fs-400);
+  }
+  .slider__buttons {
+    padding: 1.8rem 2rem;
+    width: 10rem;
+    left: 15%;
+  }
+} */
