--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
   --color-secondary: #babacf;
   --color-background: #ffffff;
 
-  --fs-xl: 3.2rem;
+  --fs-xl: 3rem;
   --fs-400: 1.8rem;
   --fs-300: 1.5rem;
+
+  --shadow-image: 0 10px 20px 5px #20204640;
 }
 
 *,
@@ -27,6 +29,10 @@ body {
   font-size: var(--fs-400);
   font-weight: 300;
   color: var(--color-primary);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background: url(../images/pattern-curve.svg) no-repeat bottom left;
 }
 
 h2 {
@@ -38,19 +44,44 @@ h2 {
 .testimonial {
   text-align: center;
   width: 85%;
-  margin: 5rem auto;
+  max-width: 1180px;
+  margin-inline: auto;
+  padding-block: 5rem;
+}
+
+.slide__img-container {
+  width: 100%;
+  position: relative;
+  padding: 3.5rem;
+  margin-bottom: 8rem;
+  background: url(../images/pattern-bg.svg) no-repeat center/contain;
 }
 
 .testimonial__photo {
   display: block;
-  margin-inline: auto;
-  width: 250px;
+  width: 100%;
   border-radius: 5px;
   max-height: 0;
 }
 
+.testimonial__content-container {
+  position: relative;
+}
+
+.testimonial__content-container::before {
+  content: "";
+  position: absolute;
+  height: 65px;
+  width: 65px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -20px;
+  background: url(../images/pattern-quotes.svg) no-repeat center/contain;
+}
+
 .testimonial__photo--active {
   max-height: 100%;
+  box-shadow: var(--shadow-image);
 }
 
 .testimonial__content {
@@ -65,7 +96,7 @@ h2 {
 }
 
 .testimonial__text {
-  font-size: clamp(var(--fs-400), 1.4rem + 1vw, var(--fs-xl));
+  font-size: var(--fs-400);
   padding-bottom: 2rem;
   line-height: 1.4;
   quotes: '"' '"';
@@ -87,11 +118,6 @@ h2 {
   color: var(--color-secondary);
 }
 
-.slide__img-container {
-  position: relative;
-  margin-bottom: 8rem;
-}
-
 /* Slider buttons */
 .slider__buttons {
   display: flex;
@@ -101,9 +127,10 @@ h2 {
   padding: 1.2rem 1.5rem;
   border-radius: 50px;
   position: absolute;
-  bottom: -20px;
+  bottom: 18px;
   left: 50%;
   transform: translateX(-50%);
+  box-shadow: var(--shadow-image);
 }
 
 .btn {
@@ -114,6 +141,7 @@ h2 {
 
 /* Attribution */
 .attribution {
+  position: absolute;
   font-size: 11px;
   text-align: center;
 }
@@ -121,45 +149,56 @@ h2 {
   color: hsl(228, 45%, 44%);
 }
 
-/* @media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) {
   .testimonial {
-    text-align: left;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    padding-left: 10%;
+    text-align: left;
+    padding-block: 0;
   }
 
-  .testimonial__photo {
-    width: 45%;
-    transform: translateX(-25%);
-    z-index: -1;
+  .slide__img-container {
+    width: 50%;
     margin-bottom: 0;
+    transform: translateX(-10%);
   }
 
-  .testimonial__content {
-    width: 55%;
+  .testimonial__content-container {
+    width: 50%;
+    transform: translateX(10%);
   }
 
-  .testimonial__author {
-    display: flex;
-    gap: 0.5rem;
+  .testimonial__content-container::before {
+    width: 100px;
+    height: 100px;
+    left: 20%;
+    top: -50px;
+  }
+  .testimonial__text {
+    font-size: min(0.5rem + 1.8vw, var(--fs-xl));
   }
 
-  .button-frame {
-    width: 38%;
-    padding-bottom: 39%;
-    transform: translateX(49%);
+  .slider__buttons {
+    left: 20%;
   }
 }
 
 @media screen and (min-width: 900px) {
+  .testimonial__author {
+    display: flex;
+    gap: 1rem;
+  }
+
   .testimonial__author > * {
     font-size: var(--fs-400);
   }
-  .slider__buttons {
-    padding: 1.8rem 2rem;
-    width: 10rem;
-    left: 15%;
+
+  .slide__img-container {
+    padding: 6rem;
   }
-} */
+
+  .slider__buttons {
+    bottom: 40px;
+  }
+}
